--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ moviepy==2.2.1
 python-dotenv==1.1.1
 pydub==0.25.1
 requests==2.32.5
-Flask==3.1.2
+fastapi
+python-multipart
 Werkzeug==3.1.3
+uvicorn
