--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ moviepy==2.2.1
 python-dotenv==1.1.1
 pydub==0.25.1
 requests==2.32.5
-fastapi
-python-multipart
 Werkzeug==3.1.3
-uvicorn
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+pydantic==2.5.0
