--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python3.12"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.py",
+      "use": "@vercel/python"
     }
-  }
+  ]
 }
